# hostsctl

./: Cargo.toml  README.md
src/: app.rs  config.rs  db.rs  file_ops.rs  main.rs  template.rs
templates/: hosts.j2
