[package]
name = "hostsctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hostctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
askama = "0.15"
tracing = "0.1"
env_logger = "0.11"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.101"
log = "0.4.29"

[target.'cfg(unix)'.dependencies]
sudo = "0.6"
